--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <main id="top">
         <section>
             <h2>ALT School ID</h2>
-            <p>123456789</p>
+            <p>ALT/SOE/024/5210</p>
         </section>
         <section>
             <h2>Biography</h2>
