--- a/Index.html
+++ b/Index.html
@@ -1,49 +1,52 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
     <title>My Basic Information</title>
 </head>
 <body>
     <header>
-        <h1>My Profile</h1>
+        <h1 style=" font-family: PT Sans Narrow", sans-serif;>My Profile</h1>
         <nav>
             <a href="#top">Go to Top</a>
         </nav>
     </header>
     <main id="top">
         <section>
-            <h2>ALT School ID</h2>
-            <p>ALT/SOE/024/5210</p>
+            <h2 style="font-family: PT Sans Narrow", sans-serif;>ALT School ID</h2>
+            <p style="font-family: PT Sans Narrow", sans-serif;>ALT/SOE/024/5210</p>
         </section>
         <section>
             <h2>Biography</h2>
-            <p>
-                My name is [Your Name]. I am passionate about technology, learning new things, 
+            <p style="font-family: PT Sans Narrow", sans-serif;>
+                My name is Friday Blessed. I am passionate about technology, learning new things, 
                 and problem-solving. I joined ALT School to develop technical expertise and become 
-                a well-rounded software engineer.
+                a well-rounded Frontend engineer.
             </p>
         </section>
         <section>
-            <h2>Why I Joined ALT School</h2>
+            <h2 style="font-family: PT Sans Narrow", sans-serif;>Why I Joined ALT School</h2>
             <p>
                 I joined ALT School because it offers a structured program tailored for aspiring 
-                engineers, focusing on practical and theoretical aspects of software development. 
+                engineers, focusing on practical and theoretical aspects of frontend development. 
                 The mentorship, project-based learning, and hands-on experience appealed to me 
                 greatly, making it the ideal program to advance my career.
             </p>
         </section>
         <section>
-            <h2>My Goals</h2>
-            <p>
+            <h2 style="font-family: PT Sans Narrow", sans-serif;>My Goals</h2>
+            <p style="font-family: PT Sans Narrow", sans-serif;>
                 My goals in the School of Engineering program include:
             </p>
             <ul>
-                <li>Mastering programming languages like JavaScript and Python.</li>
-                <li>Building real-world software applications.</li>
-                <li>Collaborating with peers on impactful projects.</li>
-                <li>Preparing for a successful career in software engineering.</li>
+                <li style="font-family: PT Sans Narrow", sans-serif;>Mastering programming languages like JavaScript and React JS.</li>
+                <li style="font-family: PT Sans Narrow", sans-serif;>Building real-world Frontend applications.</li>
+                <li style="font-family: PT Sans Narrow", sans-serif;>Collaborating with peers on impactful projects.</li>
+                <li style="font-family: PT Sans Narrow", sans-serif;>Preparing for a successful career in frontend engineering.</li>
             </ul>
         </section>
         <footer>
